--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,12 +32,23 @@
             <button class="btn" type="submit">Зберегти</button>
         </form>
         <p class="counter">Залишилось до виконання 0 завдань</p>
-        <!-- <div class="message-duplicate" hidden></div> -->
-        <ul class="list"></ul>
+        <ul class="task-lists" >
+            <li class="items items-fast" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="2000">
+                <h2 class="subtitle">КРОВ З НОСА</h2>
+                <ul class="task-items-list items-fast-list" ></ul>
+            </li>
+            <li class="items item-slow" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="2000">
+                <h2 class="subtitle">ПОЧЕКАЄ ТРОХА</h2>
+                <ul class="list task-items-list  items-slow-list"></ul>
+            </li>
+        </ul>
     </div>
     <script src="
     https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
     " async></script>
     <script src="my-script.js" defer></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
